@@ -61,6 +61,7 @@
 
 "suppliers": {
 	"enabled": true,
+	"rals_conns": ["*internal"]
 },
 
 "stats": {
