@@ -86,6 +86,7 @@
 	"prefix_indexed_fields":["Destination"],
 	"stats_conns": ["conn1"],
 	"resources_conns": ["conn1"],
+	"rals_conns": ["conn1"],
 },
 
 
