@@ -104,6 +104,7 @@
 	"enabled": true,
 	"stats_conns": ["conn1"],
 	"resources_conns": ["conn1"],
+	"rals_conns": ["conn1"],
 },
 
 
